--- a/style.css
+++ b/style.css
@@ -1,53 +1,108 @@
+html {
+  height: 100%;
+}
+
 body {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
   background-color: #fff;
   color: #fff;
+  background-image: url(images/pexels-anna-nekrashevich-6801648-edited-by-pixlr.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .container {
-  width: auto;
-  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1024px;
+  /* height: auto; */
 }
 
 header {
   background-color: #1cbc9c;
   color: #fff !important;
-  height: 100px;
+  height: auto;
+  padding-top: 5px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
 }
 
 section {
-  height: 300px;
+  height: auto;
 }
 
-article {
-  background-color: #1cbc9c;
-  height: 50px;
+nav {
+  background-color: rgba(195, 208, 219, 0.5);
+  /* height: 50px; */
+}
+
+.nav-text {
+  color: #002145;
+  font-size: large;
+  font-family: 'Open Sans', Arial, sans-serif;
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
 }
 
 footer {
-  height: 50px;
+  background-color: #002145;
+  height: auto;
+  padding-top: 5px;
+  padding-right: 20px;
+  padding-bottom: 5px;
+  padding-left: 20px;
 }
 
 .footer-text {
   font-size: smaller;
-  color: black;
-  font-family: 'Open Sans',Arial,sans-serif;
+  font-family: 'Open Sans', Arial, sans-serif;
 }
 
 h1 {
   font-size: larger;
-  font-family: Arial,Sans-Serif!important;
+  font-family: Arial, Sans-Serif !important;
 }
 
 h2 {
   font-size: x-large;
-  font-family: Arial,Sans-Serif!important;
+  font-family: Arial, Sans-Serif !important;
 }
 
-p{
+p {
   font-size: large;
-  font-family: 'Open Sans',Arial,sans-serif;
+  font-family: 'Open Sans', Arial, sans-serif;
 }
 
+.link1 {
+  color: #1F51FF;
+  font-family: Arial, Sans-Serif !important;
+  text-decoration: none;
+}
+
+.link2 {
+  color: #1F51FF;
+  font-size: x-large;
+  font-family: Arial, Sans-Serif !important;
+  text-decoration: none;
+}
+
+.footer-link {
+  color: #fff;
+  font-weight: bold;
+  font-family: 'Open Sans', Arial, sans-serif;
+  text-decoration: none;
+}
+
+.a-link {
+  color: #1F51FF;
+  font-size: large;
+  font-family: 'Open Sans', Arial, sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+}
